sfSandBoxCode/force-app/main/default/objects/Work_Order_Item_Issue__c/Work_Order_Item_Issue__c.object-meta.xml
<CustomObject>
    <label>Work Order Item Issue</label>
    <nameField>
        <displayFormat>WOISS-{00000}</displayFormat>
        <label>WO Item Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Item Issuances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>