sfSandBoxCode/force-app/main/default/objects/Work_Order_Item_Issue__c/fields/Inventory_UoM__c.field-meta.xml
<CustomField>
    <fullName>Inventory_UoM__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory UoM</label>
    <referenceTo>Inventory_UoM__c</referenceTo>
    <relationshipLabel>Work Order Item Issuances</relationshipLabel>
    <relationshipName>Work_Order_Item_Issuances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>