sfSandBoxCode/force-app/main/default/objects/Work_Order_Item_Issue__c/fields/Issued_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Issued_Quantity__c</fullName>
    <label>Issued Quantity</label>
    <precision>10</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Number</type>
</CustomField>