sfSandBoxCode/force-app/main/default/objects/Work_Order_Item_Issue__c/fields/Issued_Value__c.field-meta.xml
<CustomField>
    <fullName>Issued_Value__c</fullName>
    <formula>Issued_Quantity__c  *  Unit_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issued Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>