sfSandBoxCode/force-app/main/default/objects/Work_Order_Item_Issue__c/fields/Reversed_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Reversed_Transaction_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reversed Transaction ID</label>
    <referenceTo>Inventory_Transaction__c</referenceTo>
    <relationshipLabel>Work Order Item Issuances</relationshipLabel>
    <relationshipName>Work_Order_Item_Issuances</relationshipName>
    <type>Lookup</type>
</CustomField>