sfSandBoxCode/force-app/main/default/objects/Work_Order_Item_Issue__c/fields/Unit_Value__c.field-meta.xml
<CustomField>
    <fullName>Unit_Value__c</fullName>
    <label>Unit Value</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>