sfSandBoxCode/force-app/main/default/objects/Work_Order_Item_Issue__c/fields/Work_Order_Issuance_Reversal__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Issuance_Reversal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this Work Order Issuance has been reversed</description>
    <inlineHelpText>Checked if this Work Order Issuance has been reversed</inlineHelpText>
    <label>Work Order Issuance Reversal</label>
    <type>Checkbox</type>
</CustomField>