sfSandBoxCode/force-app/main/default/objects/Work_Order_Item_Issue__c/fields/Work_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Item__c</fullName>
    <label>Work Order Item</label>
    <referenceTo>Work_Order_Item__c</referenceTo>
    <relationshipLabel>Work Order Item Issuances</relationshipLabel>
    <relationshipName>Work_Order_Item_Issuances</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>