sfSandBoxCode/force-app/main/default/objects/Work_Order_Item_Issue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Inventory_UoM__c</columns>
    <columns>Issued_Quantity__c</columns>
    <columns>Issued_Value__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Unit_Value__c</columns>
    <columns>Work_Order_Item__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>